--- a/libs/neuron-ui-demo.ipynb
+++ b/libs/neuron-ui-demo.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -71,8 +80,44 @@
    "version": "3.4.3"
   },
   "widgets": {
-   "state": {},
-   "version": "1.1.2"
+   "state": {
+    "0f48595c251a4e59898e12c151f90ef2": {
+     "views": [
+      {
+       "cell_index": 0
+      }
+     ]
+    },
+    "25e0b5640dc242feb8e3cdf27854d31c": {
+     "views": [
+      {
+       "cell_index": 0
+      }
+     ]
+    },
+    "3d259970254a4308885b3cd4b2bcb4e8": {
+     "views": [
+      {
+       "cell_index": 0
+      }
+     ]
+    },
+    "987e87d562084fe59887698b60a10527": {
+     "views": [
+      {
+       "cell_index": 0
+      }
+     ]
+    },
+    "b696080977f3492984bbaa5e6b8e19e6": {
+     "views": [
+      {
+       "cell_index": 0
+      }
+     ]
+    }
+   },
+   "version": "1.2.0"
   }
  },
  "nbformat": 4,
