--- a/libs/neuron-ui-demo.ipynb
+++ b/libs/neuron-ui-demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -12,12 +12,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Using matplotlib backend: GTK3Agg\n",
+      "Loading Model...\n"
      ]
     }
    ],
    "source": [
+    "%matplotlib\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from RunControl import *\n",
@@ -81,35 +82,21 @@
   },
   "widgets": {
    "state": {
-    "0f48595c251a4e59898e12c151f90ef2": {
+    "2fb295428c4645b7b8a4b8db48549e01": {
      "views": [
       {
        "cell_index": 0
       }
      ]
     },
-    "25e0b5640dc242feb8e3cdf27854d31c": {
+    "3c6c881e89f34ad1ab46b6bf7f66608c": {
      "views": [
       {
        "cell_index": 0
       }
      ]
     },
-    "3d259970254a4308885b3cd4b2bcb4e8": {
-     "views": [
-      {
-       "cell_index": 0
-      }
-     ]
-    },
-    "987e87d562084fe59887698b60a10527": {
-     "views": [
-      {
-       "cell_index": 0
-      }
-     ]
-    },
-    "b696080977f3492984bbaa5e6b8e19e6": {
+    "f679aaf62fd24e2aa42a39db41dc1fe5": {
      "views": [
       {
        "cell_index": 0
