removing all cells but one

--- a/libs/neuron-ui-demo.ipynb
+++ b/libs/neuron-ui-demo.ipynb
@@ -4,15 +4,24 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using matplotlib backend: GTK3Agg\n",
-      "Loading Model...\n"
+      "Using matplotlib backend: GTK3Agg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Widget Javascript not detected.  It may not be installed properly. Did you enable the widgetsnbextension? If not, then run \"jupyter nbextension enable --py --sys-prefix widgetsnbextension\"\n",
+      "Widget Javascript not detected.  It may not be installed properly. Did you enable the widgetsnbextension? If not, then run \"jupyter nbextension enable --py --sys-prefix widgetsnbextension\"\n",
+      "Widget Javascript not detected.  It may not be installed properly. Did you enable the widgetsnbextension? If not, then run \"jupyter nbextension enable --py --sys-prefix widgetsnbextension\"\n"
      ]
     }
    ],
@@ -20,17 +29,6 @@
     "%matplotlib\n",
     "import GeppettoNeuron \n",
     "GeppettoNeuron.init()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "analysis()"
    ]
   }
  ],
@@ -54,21 +52,21 @@
   },
   "widgets": {
    "state": {
-    "5eb98b911a7443c79b4265672de4288a": {
+    "24eb1dbf1540479aa13f867fe5ba12ef": {
      "views": [
       {
        "cell_index": 0
       }
      ]
     },
-    "c2591a2daee74a4eb4dd6eb175f16899": {
+    "272d7beddd5549eb85be44bc42ace91f": {
      "views": [
       {
        "cell_index": 0
       }
      ]
     },
-    "d43e25588ce4435d9f72410b45def043": {
+    "a54f484025fe47f09725aec9135d41f1": {
      "views": [
       {
        "cell_index": 0
