Commenting out matplotlib

--- a/libs/neuron-ui-demo.ipynb
+++ b/libs/neuron-ui-demo.ipynb
@@ -7,26 +7,9 @@
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using matplotlib backend: GTK3Agg\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Widget Javascript not detected.  It may not be installed properly. Did you enable the widgetsnbextension? If not, then run \"jupyter nbextension enable --py --sys-prefix widgetsnbextension\"\n",
-      "Widget Javascript not detected.  It may not be installed properly. Did you enable the widgetsnbextension? If not, then run \"jupyter nbextension enable --py --sys-prefix widgetsnbextension\"\n",
-      "Widget Javascript not detected.  It may not be installed properly. Did you enable the widgetsnbextension? If not, then run \"jupyter nbextension enable --py --sys-prefix widgetsnbextension\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%matplotlib\n",
+    "#%matplotlib\n",
     "import GeppettoNeuron \n",
     "GeppettoNeuron.init()"
    ]
@@ -34,47 +17,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
-  },
-  "widgets": {
-   "state": {
-    "24eb1dbf1540479aa13f867fe5ba12ef": {
-     "views": [
-      {
-       "cell_index": 0
-      }
-     ]
-    },
-    "272d7beddd5549eb85be44bc42ace91f": {
-     "views": [
-      {
-       "cell_index": 0
-      }
-     ]
-    },
-    "a54f484025fe47f09725aec9135d41f1": {
-     "views": [
-      {
-       "cell_index": 0
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
