add popup example

--- a/libs/neuron-ui-demo.ipynb
+++ b/libs/neuron-ui-demo.ipynb
@@ -15,6 +15,27 @@
     "import GeppettoNeuron \n",
     "GeppettoNeuron.init()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#from geppettoJupyter.geppetto_comm import GeppettoCoreAPI as G\n",
+    "#G.popupVariable('Description', ['CA3 pyramidal neuron (Safiulina et al. 2010).<br/>Control of GABA release at single mossy fiber-CA3 connections in the developing hippocampus. <a href=\"https://senselab.med.yale.edu/ModelDB/showmodel.cshtml?model=126814\">See on ModelDB</a><br/>'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
