--- a/libs/neuron-ui-demo.ipynb
+++ b/libs/neuron-ui-demo.ipynb
@@ -2,17 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "%load_ext autoreload \n",
-    "%autoreload 2\n",
-    "import neuron_geppetto \n",
-    "neuron_geppetto.init()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
